pre page_type init state

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
       currency: 1,
       json_path: 'https://farma.vbrqx.com/ang/',
       json_file: 'home.json',
-      // page_type: 'home'
+      page_type: 'home'
 
     }
   </script>
