json structer changed and page object added in html

--- a/src/index.html
+++ b/src/index.html
@@ -22,10 +22,12 @@
     window.APP_DATA = {
       lang: "en",
       currency: 1,
-      json_path: 'https://farma.vbrqx.com/ang/',
+      json_path: 'https://farma.vbrqx.com/ang/json/',
       json_file: 'home.json',
-      page_type: 'home'
-
+      page: {
+        type: 'home',
+        view: 'list'
+      }
     }
   </script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
