--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,11 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <!-- <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+  <!-- Updated on 5th December -->
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
-    crossorigin="anonymous"> -->
+    crossorigin="anonymous">
 
 </head>
 
@@ -25,8 +26,16 @@
       json_path: 'https://farma.vbrqx.com/ang/json/',
       json_file: 'home.json',
       page: {
-        type: 'home',
-        view: 'list'
+        type: 'home'
+        // view: 'grid',
+        // filtered_by: 'name',
+        // jsons: [
+        //   "links_or_name_of_filtered_product_json_file.json",
+        //   "links_or_name_of_filtered_product_json_file.json",
+        //   "links_or_name_of_filtered_product_json_file.json",
+        //   "links_or_name_of_filtered_product_json_file.json",
+        //   "links_or_name_of_filtered_product_json_file.json",
+        // ]
       }
     }
   </script>
