joining all api, loadsh merge added

--- a/src/index.html
+++ b/src/index.html
@@ -27,17 +27,17 @@
 
     <script>
       window.APP_DATA = {
-        lang: "en",
+        lang: "es",
         currency: 1,
-        common_json: "https://farma.vbrqx.com/ang/json/common.json",
+        common_json:
+          "http://farma.vbrqx.com/farma/fnode/common_jsons_generated/front_es_json_file.json",
+        spec_json:
+          "http://farma.vbrqx.com/farma/fnode/common_front_jsons_generated/front_es_json_file.json",
         lang_common_json:
-          "https://farma.vbrqx.com/ang/json/langs/en/common.json",
-        lang_page_json: "https://farma.vbrqx.com/ang/json/langs/en/home.json",
-
-        page: {
-          type: "home"
-          //page_extra_json goes here (homepage doesn't have any)
-        }
+          "http://farma.vbrqx.com/farma/fnode/lang_jsons_generated/front_es_json_file.json",
+        lang_spec_json:
+          "http://farma.vbrqx.com/farma/fnode/lang_front_jsons_generated/front_es_json_file.json",
+        page: { type: "home" }
       };
     </script>
     <script
