topmenu and promo nav text overflow fixed

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,12 @@
       integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+      integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ"
+      crossorigin="anonymous"
+    />
   </head>
 
   <body>
@@ -29,7 +34,8 @@
         spec_json:
           "http://farma.vbrqx.com/farma/fnode/common_front_jsons_generated/front_es_json_file.json",
         lang_common_json:
-          "http://farma.vbrqx.com/farma/fnode/lang_jsons_generated/front_es_json_file.json",
+          "http://farma.vbrqx.com/farma/fnode/comm_lang_jsons_generated/front_es_json_file.json",
+
         lang_spec_json:
           "http://farma.vbrqx.com/farma/fnode/lang_front_jsons_generated/front_es_json_file.json",
         page: { type: "home" }
